[tool.poetry]
name = "docs"
version = "1.0.0"
description = "Documentation for the St. Jude Cloud project."
authors = ["St. Jude Cloud Team <support@stjude.cloud>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.1"
mkdocs-material = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
